# reddit-meme-analyzer

./: Cargo.toml  README.md  docker-compose.yaml  killall.sh  run.sh  scripts.sh
docker/: db.Dockerfile  nodes.Dockerfile
informe/: Makefile  custom.sty  informe.md  main.tex  reddit-meme-analyzer.drawio
src/: comment.rs  connection.rs  lib.rs  messages.rs  post.rs  service.rs
