[package]
name = "tp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4"
bincode = "1.3.3"
chrono = "0.4"
csv = "1.1.6"
envconfig = "0.10.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.5.6"
serde = { version = "1.0", features = ["derive"] }
